# code_snippets

./: README.md
cpp/event_handling_patterns/reactor/: CMakeLists.txt  README.md  main.cpp
cpp/multi_threading/ThreadSafeContainers/: BluntQueue.hpp  FineQueue.hpp  ThreadSafeContainers.sln  ThreadSafeContainers.vcxproj  ThreadSafeContainers.vcxproj.filters  ThreadSafeQueue.hpp  ThreadStorage.cpp  main.cpp
cpp/multi_threading/ThreadSafeContainers/Tests/: Tests.vcxproj  test.cpp
cpp/multi_threading/ThreadSafeQueue/: ThreadSafeQueue.hpp  ThreadSafeQueue.sln  ThreadSafeQueue.vcxproj  ThreadSafeQueue.vcxproj.filters  ThreadStorage.h
cpp/multi_threading/ThreadSafeQueue/Tests/: Tests.vcxproj  test.cpp
cpp/zero_mq/3rparty/: README.md
cpp/zero_mq/src/basics/divide_and_conquer/: CMakeLists.txt  tasksink.cpp  taskvent.cpp  taskwork.cpp
cpp/zero_mq/src/basics/hello_world/: CMakeLists.txt  CMakeSettings.json  hwclient.cpp  hwserver.cpp
cpp/zero_mq/src/basics/one_way_distribution/: CMakeLists.txt  CMakeSettings.json  wuclient.cpp  wuserver.cpp
